# SpFFT

./: .clang-format  .readthedocs.yml  CMakeLists.txt  README.md  azure-pipelines.yml  style_guide.md
.github/workflows/: ci.yml
CI/azure_templates/: ubuntu_build_test.yml
cmake/: SpFFT.pc.in  SpFFTConfig.cmake  SpFFTConfigVersion.cmake  SpFFTSharedConfig.cmake  SpFFTStaticConfig.cmake  SpFFTTargets.cmake
cmake/modules/: FindARMPL.cmake  FindFFTW.cmake  FindFFTWF.cmake  FindHIP.cmake  FindMKLSequential.cmake  FindROCFFT.cmake  FindROCM.cmake
cmake/modules/FindHIP/: run_hipcc.cmake  run_make2cmake.cmake
docs/: Doxyfile  Makefile
docs/source/: conf.py  details.rst  errors_c.rst  examples.rst  exceptions.rst  grid.rst  grid_c.rst  grid_float.rst  grid_float_c.rst  index.rst  installation.rst  multi_transform.rst  multi_transform_c.rst  transform.rst  transform_c.rst  transform_float.rst  transform_float_c.rst  types.rst
examples/: example.c  example.cpp  example.f90
include/spfft/: config.h.in  errors.h  exceptions.hpp  grid.h  grid.hpp  grid_float.h  grid_float.hpp  multi_transform.h  multi_transform.hpp  multi_transform_float.h  multi_transform_float.hpp  spfft.f90  spfft.h  spfft.hpp  transform.h  transform.hpp  transform_float.h  transform_float.hpp  types.h
src/: CMakeLists.txt
src/compression/: compression_gpu.hpp  compression_host.hpp  indices.hpp
src/compression/gpu_kernels/: compression_kernels.cu  compression_kernels.hpp
src/execution/: execution_gpu.cpp  execution_gpu.hpp  execution_host.cpp  execution_host.hpp
src/fft/: fftw_interface.hpp  fftw_mutex.cpp  fftw_mutex.hpp  fftw_plan_1d.hpp  fftw_real_plan_1d.hpp  transform_1d_gpu.hpp  transform_1d_host.hpp  transform_2d_gpu.hpp  transform_interface.hpp  transform_real_1d_host.hpp  transform_real_2d_gpu.hpp
src/gpu_util/: complex_conversion.cuh  gpu_device_guard.hpp  gpu_event_handle.hpp  gpu_fft_api.cpp  gpu_fft_api.hpp  gpu_kernel_parameter.hpp  gpu_pointer_translation.hpp  gpu_runtime.hpp  gpu_runtime_api.hpp  gpu_stream_handle.hpp  gpu_transfer.hpp
src/memory/: aligned_allocation.cpp  aligned_allocation.hpp  array_view_utility.hpp  gpu_array.hpp  gpu_array_const_view.hpp  gpu_array_view.hpp  host_array.hpp  host_array_const_view.hpp  host_array_view.hpp  memory_type_trait.hpp
src/mpi_util/: mpi_check_status.hpp  mpi_communicator_handle.hpp  mpi_datatype_handle.hpp  mpi_init_handle.hpp  mpi_match_elementary_type.hpp  mpi_request_handle.hpp
src/parameters/: parameters.cpp  parameters.hpp
src/spfft/: grid.cpp  grid_float.cpp  grid_internal.cpp  grid_internal.hpp  multi_transform.cpp  multi_transform_float.cpp  multi_transform_internal.hpp  transform.cpp  transform_float.cpp  transform_internal.cpp  transform_internal.hpp
src/symmetry/: symmetry.hpp  symmetry_gpu.hpp  symmetry_host.hpp
src/symmetry/gpu_kernels/: symmetry_kernels.cu  symmetry_kernels.hpp
src/timing/: host_timing.cpp  host_timing.hpp  rt_graph.cpp  timing.cpp  timing.hpp
src/transpose/: transpose.hpp  transpose_gpu.hpp  transpose_host.hpp  transpose_mpi_buffered_gpu.cpp  transpose_mpi_buffered_gpu.hpp  transpose_mpi_buffered_host.cpp  transpose_mpi_buffered_host.hpp  transpose_mpi_compact_buffered_gpu.cpp  transpose_mpi_compact_buffered_gpu.hpp  transpose_mpi_compact_buffered_host.cpp  transpose_mpi_compact_buffered_host.hpp  transpose_mpi_unbuffered_gpu.cpp  transpose_mpi_unbuffered_gpu.hpp  transpose_mpi_unbuffered_host.cpp  transpose_mpi_unbuffered_host.hpp
src/transpose/gpu_kernels/: buffered_kernels.cu  buffered_kernels.hpp  compact_buffered_kernels.cu  compact_buffered_kernels.hpp  local_transpose_kernels.cu  local_transpose_kernels.hpp
src/util/: common_types.hpp  omp_definitions.hpp  type_check.hpp
tests/: CMakeLists.txt  gtest_mpi.cpp  gtest_mpi.hpp  run_local_tests.cpp  run_mpi_tests.cpp
tests/local_tests/: test_disjoint.cpp  test_fftw_prop_hash.cpp  test_host_array.cpp  test_local_transform.cpp
tests/mpi_tests/: test_multi_transform.cpp  test_transform.cpp  test_transpose.cpp  test_transpose_gpu.cpp
tests/programs/: benchmark.cpp  main.cpp  main_mpi.cpp
tests/test_util/: generate_indices.hpp  test_check_values.hpp  test_transform.hpp
